--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openclaw-groupme",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "OpenClaw GroupMe channel plugin",
   "repository": {
     "type": "git",
@@ -14,8 +14,8 @@
   "dependencies": {
     "zod": "^4.3.6"
   },
-  "devDependencies": {
-    "openclaw": "workspace:*"
+  "peerDependencies": {
+    "openclaw": ">=2026.2.0"
   },
   "openclaw": {
     "extensions": [
@@ -32,7 +32,7 @@
       "quickstartAllowFrom": true
     },
     "install": {
-      "npmSpec": "@openclaw/groupme",
+      "npmSpec": "openclaw-groupme",
       "localPath": "extensions/groupme",
       "defaultChoice": "npm"
     }
