Implement history buffer for requireMention: true mode
- Add history buffer that passively accumulates non-mentioned messages
- When bot is mentioned, inject buffered history as context
- Add historyLimit config (default 20)
- Add history.ts with HistoryEntry types and buffer management
- Update inbound.ts with history recording and context injection
- Update README with response mode docs and configuration examples
- Trim package.json openclaw section to external plugin essentials
- Add history.test.ts and inbound.history-buffer.test.ts

--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
   "dependencies": {
     "zod": "^4.3.6"
   },
+  "devDependencies": {
+    "openclaw": ">=2026.2.14",
+    "vitest": "^4.0.18"
+  },
   "peerDependencies": {
-    "openclaw": ">=2026.2.0"
+    "openclaw": ">=2026.2.14"
+  },
+  "peerDependenciesMeta": {
+    "openclaw": {
+      "optional": true
+    }
   },
   "openclaw": {
     "extensions": [
@@ -25,16 +34,10 @@
       "id": "groupme",
       "label": "GroupMe",
       "selectionLabel": "GroupMe (Bot API)",
-      "docsPath": "/channels/groupme",
-      "docsLabel": "groupme",
-      "blurb": "GroupMe bot webhook integration (group chats only).",
-      "order": 95,
-      "quickstartAllowFrom": true
+      "blurb": "GroupMe bot webhook integration (group chats only)."
     },
     "install": {
-      "npmSpec": "openclaw-groupme",
-      "localPath": "extensions/groupme",
-      "defaultChoice": "npm"
+      "npmSpec": "openclaw-groupme"
     }
   }
 }
