fix: use 'groupme' as plugin id to align with OpenClaw channel resolution
OpenClaw's doctor auto-enable derives the plugin id from the channel
config key (channels.groupme), not from the manifest. Using
'openclaw-groupme' as the plugin id causes doctor --fix to create a
mismatched plugins.entries.groupme entry that fails validation.

The npm package name remains 'openclaw-groupme' since we don't own
'groupme' on npm. The idHint mismatch warning is cosmetic and accepted.

See #28 for full technical analysis.

Fixes #28

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       "./index.ts"
     ],
     "channel": {
-      "id": "openclaw-groupme",
+      "id": "groupme",
       "label": "GroupMe",
       "selectionLabel": "GroupMe (Bot API)",
       "blurb": "GroupMe bot webhook integration (group chats only)."
