--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,11 +7,46 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  id-token: write
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
+        id: release
         with:
           release-type: node
+
+      - name: Checkout
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          registry-url: https://registry.npmjs.org
+
+      - name: Install dependencies
+        if: ${{ steps.release.outputs.release_created }}
+        run: npm ci
+
+      - name: Type-check
+        if: ${{ steps.release.outputs.release_created }}
+        run: npm run typecheck
+
+      - name: Run tests
+        if: ${{ steps.release.outputs.release_created }}
+        run: npm test
+
+      - name: Show package version
+        if: ${{ steps.release.outputs.release_created }}
+        run: npm pkg get name version
+
+      - name: Publish package
+        if: ${{ steps.release.outputs.release_created }}
+        run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
